@@ -88,6 +88,9 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>com.ums.system.App</mainClass>
+                    <options>
+                        <option>--enable-native-access=javafx.graphics</option>
+                    </options>
                 </configuration>
             </plugin>
 
